[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://fonts/arcade_normal_font.tres" type="DynamicFont" id=2]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 50.0
size_flags_vertical = 0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 52.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 45.0
alignment = 1

[node name="ShipsPanel" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 826.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/ShipsPanel"]
margin_top = 10.0
margin_right = 80.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "Ships"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 830.0
margin_right = 1010.0
margin_bottom = 38.0
custom_constants/separation = 20
alignment = 2

[node name="LevelPanel" type="VBoxContainer" parent="PanelContainer/HBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/HBoxContainer/LevelPanel"]
margin_right = 80.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "Level"
align = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Level" type="Label" parent="PanelContainer/HBoxContainer/HBoxContainer/LevelPanel"]
margin_top = 21.0
margin_right = 80.0
margin_bottom = 38.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "1"
align = 2
__meta__ = {
"_editor_description_": ""
}

[node name="ScorePanel" type="VBoxContainer" parent="PanelContainer/HBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 180.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/HBoxContainer/ScorePanel"]
margin_right = 80.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "Score"
align = 2

[node name="Score" type="Label" parent="PanelContainer/HBoxContainer/HBoxContainer/ScorePanel"]
margin_top = 21.0
margin_right = 80.0
margin_bottom = 38.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "256"
align = 2
